# wallpy

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/wallpy/: __main__.py  config.py  config_old.py  elevate.py  engine.py  models.py  schedule.py  schedule_old.py  service.py  validate.py
src/wallpy/cli/: __init__.py  app.py  config.py  logs.py  pack.py  service.py  utils.py
src/wallpy/data/: config.toml
src/wallpy/data/packs/default/: schedule.toml
src/wallpy/data/packs/zelda-wind-walker/: schedule.toml
src/wallpy/schedule/: models.py
src/wallpy/scripts/windows/: install_task.ps1
tests/manual/: test_config_manual.py  test_schedule_manual.py
tests/schedules/: 01_basic_timeblocks.toml  02_solar_events.toml  03_weekly.toml  04_invalid_gaps.toml
tests/wallpy/: test_config.py  test_models.py  test_schedule_manager.py  test_schedule_parser.py  test_schedule_validator.py  test_solar_calculator.py  test_time_spec_parser.py
