[project]
name = "wallpy-sensei"
version = "2.1.0"
description = ""
authors = [
    {name = "Jaiyank Saxena",email = "siphyshu@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "rich (>=13.9.4,<14.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pywin32 (>=308,<309)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
