[tool.poetry]
name = "wallpy-sensei"
version = "2.3.1"
description = "Dynamic wallpaper scheduler based on time of day"
authors = ["Jaiyank Saxena <siphyshu@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wallpy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.10.6,<3.0.0"
typer = ">=0.15.1,<0.16.0"
rich = ">=13.9.4,<14.0.0"
watchdog = ">=6.0.0,<7.0.0"
pywin32 = { version = ">=308,<309", markers = "sys_platform == 'win32'" }
astral = ">=3.2,<4.0"
click = "^8.1.3"
tomli = "^2.0.1"
platformdirs = "^3.2.0"
psutil = "^5.9.4"

[tool.poetry.scripts]
wallpy = "wallpy.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"