[tool.poetry]
name = "wallpy-sensei"
version = "2.16.0"
description = "Dynamic wallpaper scheduler based on time of day"
authors = ["Jaiyank Saxena <siphyshu@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wallpy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.10.6,<3.0.0"
typer = ">=0.15.1,<0.16.0"
rich = ">=13.9.4,<14.0.0"
watchdog = ">=6.0.0,<7.0.0"
pywin32 = { version = ">=308,<309", markers = "sys_platform == 'win32'" }
astral = ">=3.2,<4.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
platformdirs = "^3.2.0"
psutil = "^5.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
wallpy = "wallpy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
norecursedirs = ["tests/manual"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.setuptools.package_data]
wallpy = ["data/**/*"]